--- a/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
+++ b/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
@@ -7,7 +7,7 @@
 	[% ELSE %]
 	    <title>Meran::UNLP</title>
 	[% END %]
-	<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme_intra %]/includes/completo.css">
+	<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme_intra %]/includes/intranet.css">
 
 </head>
 
