--- a/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
@@ -1,6 +1,6 @@
 [% USE HTML %]
 
-<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme %]/includes/completo.css">
+<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme %]/includes/intranet.css">
 
 <fieldset class="resultados_busqueda">
      <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]:</legend> 
