--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 	    $("#temas_intra").change(function() {
-            $("link").attr("href","[% temas %]/"+$("#temas_intra").val()+"/includes/completo.css");
+            $("link").attr("href","[% temas %]/"+$("#temas_intra").val()+"/includes/intranet.css");
 	        return false;
 	    });
 	});
