--- a/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
@@ -1,6 +1,6 @@
 [% USE HTML %]
 
-<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme %]/includes/completo.css">
+<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme %]/includes/intranet.css">
 
 <fieldset class="">
             <div class="encabezado">
