--- a/intranet/htdocs/intranet-tmpl/intranet-structure.css
+++ b/intranet/htdocs/intranet-tmpl/intranet-structure.css
@@ -4180,7 +4180,6 @@ button.thoughtbot:hover {
 
 }
 
-<<<<<<< HEAD
 
 /* gritter*/
 #gritter-notice-wrapper {
@@ -4261,8 +4260,8 @@ button.thoughtbot:hover {
 }
 .gritter-light .gritter-title {
     text-shadow: none;
-=======
+}
+
 .hidden_element {
     display: none;
->>>>>>> c213503eb77ad9368e30d81554c00137e3a0dfd1
 }
