--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -119,7 +119,7 @@
 		<li class="sub_item">
 		 <label for="codigo_postal">[% "C&oacute;digo Postal" | i18n %]</label>
 		  <input type="number" min="0" name="codigo_postal"  id="codigo_postal" placeholder='[% "C&oacute;digo postal" | i18n %]'  
-		         size="25" value="[% codigo_postal %]">
+		         size="25" value="[% socio_modificar.persona.codigo_postal %]">
 		</li>
 		<li class="sub_item">
 		     <label for="ciudad"> [% "Ciudad" | i18n %] * </label>
