Nuevo esquema CSS

--- a/intranet/htdocs/intranet-tmpl/intranet-structure.css
+++ b/intranet/htdocs/intranet-tmpl/intranet-structure.css
@@ -997,6 +997,9 @@ li {
     margin: 0 auto;
 }
 
+ul li button{
+	float: right;
+}
 ul.horizontal-list {
     min-width: 696px;
     list-style: none;
