--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -51,6 +51,7 @@
     function mensajesContacto(){
         objAH               = new AjaxHelper(updateMensajesContacto);
         objAH.debug         = true;
+    this.showState      = false;
         objAH.url           = URL_PREFIX+'/mensajes_contacto.pl';
         objAH.sendToServer();
     }
