[HOTFIX] Ahora funciona bien la busqueda del reporte de Usuarios #3571

--- a/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
@@ -23,8 +23,8 @@ function changePage(ini){
 function consultar(){
 	tipoReserva=$("#tipoReserva").val();
 	objAH=new AjaxHelper(updateInfo);
-    objAH.showOverlay       = true;
-	
+    objAH.showOverlay  = true;
+	objAH.debug    = true;
     objAH.url=URL_PREFIX+"/circ/reservas_activas_result.pl";
 	
 	objAH.tipoReserva=tipoReserva;
