--- a/intranet/htdocs/intranet-tmpl/intranet-structure.css
+++ b/intranet/htdocs/intranet-tmpl/intranet-structure.css
@@ -997,9 +997,10 @@ li {
     margin: 0 auto;
 }
 
-ul li button{
-	float: right;
+.filtros button{
+	float: none !important;
 }
+
 ul.horizontal-list {
     min-width: 696px;
     list-style: none;
