--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -136,7 +136,7 @@ $(document).ready(function() {
 
 <div class="buttonContainerHorizontal">
 <ul>
-    <li class="horizontal">
+    <li class="filtros">
 			<input id="persona" type=text name="persona" value="[% persona %]" onFocus="checkFilter('focus')" 
                 onBlur="checkFilter('blur')">
 
