--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
@@ -16,7 +16,7 @@ $(document).ready(function() {
     <legend class="titulo_legend">[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>
     <div class="buttonContainerHorizontal">
     <ul>
-        <li class="horizontal">
+        <li class="filtros">
                 <input id="socio" type=text name="socio" onFocus="checkFilter('focus')" 
                     onBlur="checkFilter('blur')">
                 [% PERL %]
