--- a/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
@@ -386,7 +386,7 @@ $(document).ready( function() {
 <fieldset id="reportes">
     <legend class="titulo_legend"> [% "Administraci&oacute;n de Preferencias del Sistema" | i18n %] </legend>
     <ul>
-        <li class="sub_item" style="margin-top: 5px;">
+        <li class="sub_item filtros">
             <input type="text" id="buscar" name="buscar" >
 	            [% PERL %]
 	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
