--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/importar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/importar.tmpl
@@ -1,54 +1,68 @@
-[% INCLUDE 'intranet-top.inc' %]
-
-<script type="text/javascript">
-
-    function doUpload() {
-        $('#uploadfile').submit();
-    }
-
-</script>
+[% INCLUDE "intranet-top.inc" %]
 <fieldset>
-<legend><strong>[% "Importaci&oacute;n:" | i18n %]</strong></legend>
-
-<div style="width: 100%; clear: both; margin: 0 auto;">
-<form id="uploadfile" action="subirNuevaImportacion.pl" enctype="multipart/form-data" method="POST">
-<fieldset class="rows" id="import">
-<legend>Subir archivo al cat&aacute;logo</legend>
-
- <ol>
-      <li class="sub_item">
-      <label>Título del arhivo: </label>
-      <input type="text" name="titulo" required>
-      </li>
-      <li class="sub_item">
-        <label>Archivo: </label>
-        <input type="file" name="upfile" required accept="iso,xml">
-      </li>
-      <li class="sub_item">
-        <label>Formato: </label>
-        [% combo_formatos %]
-      </li>
-      <li class="sub_item">
-        <label>Comentario: </label>
-        <input type="text" name="comentario">
-      </li>
-      <li class="sub_item">
-        <label>Esquema: </label>
-        [% combo_esquemas %]
-      </li>
- </ol>
-
-                            [% PERL %]
-                                                print C4::AR::Filtros::to_Button(   text    => "[% 'Subir Archivo' | i18n %]",
-                                                                                    onClick => "doUpload();",
-                                                        ) ;
-                            [% END %]
-</fieldset>
-</form>
+<legend class="titulo_legend_resaltado">Listado de Proveedores</legend>
+<div class="buttonContainerHorizontal">
+<ul>
+    <li class="horizontal">
+            <input id="nombre_proveedor" type=text name="nombre_proveedor" onFocus="checkFilter('focus')"
+                onBlur="checkFilter('blur')">
+            [% PERL %]
+                                print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
+                                                                    boton   => "boton_buscar",
+                                                                    onClick => "consultar();",
+                                                                    title   => "[% 'Buscar' | i18n %]",
+                                        ) ;
+            [% END %]
+            [% PERL %]
+                                print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
+                                                                    boton   => "boton_buscar",
+                                                                    onClick => "borrar();",
+                                                                    title   => "[% 'Limpiar' | i18n %]",
+                                        ) ;
+            [% END %]
+    </li>
+</ul>
 </div>
-
-
+<ul>
+    [% PERL %]
+         print C4::AR::Filtros::setHelp(text => "[% 'Tipee el nombre o la razon social del proveedor que desea buscar.' | i18n %]",
+                                        );
+    [% END %]
+</ul>
 </fieldset>
-
-[% INCLUDE 'intranet-bottom.inc' %]
-
+<fieldset>
+    <legend class="titulo_legend">[% "Inicial del nombre o razon social del proveedor:" | i18n %]</legend>
+    <div id="filterBar" style="text-align:center">
+            <a href="#tablaResult" onClick="consultar('A')"> A |</a>
+            <a href="#tablaResult" onClick="consultar('B')"> B |</a>
+            <a href="#tablaResult" onClick="consultar('C')"> C |</a>
+            <a href="#tablaResult" onClick="consultar('D')"> D |</a>
+            <a href="#tablaResult" onClick="consultar('E')"> E |</a>
+            <a href="#tablaResult" onClick="consultar('F')"> F |</a>
+            <a href="#tablaResult" onClick="consultar('G')"> G |</a>
+            <a href="#tablaResult" onClick="consultar('H')"> H |</a>
+            <a href="#tablaResult" onClick="consultar('I')"> I |</a>
+            <a href="#tablaResult" onClick="consultar('j')"> J |</a>
+            <a href="#tablaResult" onClick="consultar('K')"> K |</a>
+            <a href="#tablaResult" onClick="consultar('L')"> L |</a>
+            <a href="#tablaResult" onClick="consultar('M')"> M |</a>
+            <a href="#tablaResult" onClick="consultar('N')"> N |</a>
+            <a href="#tablaResult" onClick="consultar('O')"> O |</a>
+            <a href="#tablaResult" onClick="consultar('P')"> P |</a>
+            <a href="#tablaResult" onClick="consultar('Q')"> Q |</a>
+            <a href="#tablaResult" onClick="consultar('R')"> R |</a>
+            <a href="#tablaResult" onClick="consultar('S')"> S |</a>
+            <a href="#tablaResult" onClick="consultar('T')"> T |</a>
+            <a href="#tablaResult" onClick="consultar('U')"> U |</a>
+            <a href="#tablaResult" onClick="consultar('V')"> V |</a>
+            <a href="#tablaResult" onClick="consultar('W')"> W |</a>
+            <a href="#tablaResult" onClick="consultar('X')"> X |</a>
+            <a href="#tablaResult" onClick="consultar('Y')"> Y |</a>
+            <a href="#tablaResult" onClick="consultar('Z')"> Z |</a>
+            <a href="#tablaResult" onClick="consultar('TODOS')"> [% "TODOS" | i18n %] </a>
+    </div>
+</fieldset>
+<br>
+<div id="result"></div>
+<br>
+[% INCLUDE "intranet-bottom.inc" %]
