--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
@@ -17,8 +17,8 @@
 
  <ol>
       <li class="sub_item">
-      <label>Título del arhivo: </label>
-      <input type="text" name="titulo" required>
+      <label>Título del archivo: </label>
+      <input type="text" name="titulo" >
       </li>
       <li class="sub_item">
         <label>Archivo: </label>
