Varios de importacion

--- a/opac/htdocs/opac-tmpl/includes/opac-structure.css
+++ b/opac/htdocs/opac-tmpl/includes/opac-structure.css
@@ -526,6 +526,12 @@ body {
 	padding: 0 0 5px;
 	width: 175px;
 }
+.subcontent-unit-border p{
+
+    text-indent: 0px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 .subcontent-unit-border-green {
 	width: 175px;
