--- a/intranet/htdocs/intranet-tmpl/intranet-structure.css
+++ b/intranet/htdocs/intranet-tmpl/intranet-structure.css
@@ -4,6 +4,14 @@ body,html {
 	height: 100%;
 }
 
+.editable:hover {
+    background: graytext;
+}
+
+.editable_hover:hover {
+    background: graytext;
+}
+
 #fancybox-content {
 	min-width: 401px;
 }
