--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -22,81 +22,139 @@ var loaderPath= "";
        
       });
 </script>
-<div id="tabla_referencia">
-    <fieldset class="resultados_busqueda">
-        <legend class="titulo_legend trigger click">[% "Detalle del esquema " | i18n %] [% esquema_title %]</legend>
-	            <div class="datos_tabla_div" id="datos_tabla_div">
-	                <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
-	                    <thead>
-	                        <tr class="titulo_tabla_resultado">
-                                <th class="click"> [% 'Campo origen' | i18n %]</th>
-                                <th class="click"> [% 'SubCampo origen' | i18n %]</th>
-                                <th class="click"> [% 'Campo destino' | i18n %]</th>
-                                <th class="click"> [% 'SubCampo destino' | i18n %]</th>
-                                <th class="click"> [% 'Nivel' | i18n %]</th>
-                                <th class="click"> [% 'Ignorar' | i18n %]</th>
-                                <th class="click"> [% 'Eliminar' | i18n %]</th>
-	                        </tr>
-	                    </thead>
-	                    <tbody>
-	                            [% FOREACH detalle IN esquema %]
-									<script>var esquema = [% detalle.id %]</script>	                              
-									<tr>
-                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
-                                    <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
-                                    <td class="editable" id="[% detalle.id %]___cd">[% detalle.getCampoDestino %]</td>
-                                    <td class="editable" id="[% detalle.id %]___scd">[% detalle.getSubcampoDestino %]</td>
-                                    <td class="editable_hover editable_nivel" id="[% detalle.id %]___n">[% detalle.getNivel %]</td>
-                                    <script>
-                                        $('.editable_nivel').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
-                                            data   : " {'1':'1','2':'2','3':'3','selected':'[% 'detalle.getNivel' %]'}",
-                                            type      : 'select',
-                                            submit    : OK,
-                                            style   : 'display: inline',
-                                            submitdata : {token: "[% token %]", edit: '1'},
-                                            indicator : loaderPath,
-    
-                                       }); 
-                                    </script>
-                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
-                                    <script>
-	                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
-	                                        data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'detalle.getIgnorarFront' %]'}",
-	                                        type      : 'select',
+
+[% IF info_esquema %]
+	<div id="tabla_referencia">
+	    <fieldset class="resultados_busqueda">
+	        <legend class="titulo_legend trigger click">[% "Esquema " | i18n %] [% HTML.escape(esquema_title) %]</legend>
+	                <div class="datos_tabla_div" id="datos_tabla_div_esquema">
+	                    <table id="tabla_esquema" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
+	                        <thead>
+	                            <tr class="titulo_tabla_resultado">
+	                                <th class="click"> [% 'Nombre' | i18n %]</th>
+	                                <th class="click"> [% 'Descripci&oacute;n' | i18n %]</th>
+	                                <th class="click"> [% 'Eliminar' | i18n %]</th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+	                             <tr>
+	                                <td class="editable_esquema" id="[% info_esquema.id %]___nombre">[% HTML.escape(info_esquema.getNombre) %]</td>
+	                                <td class="editable_esquema" id="[% info_esquema.id %]___desc">[% HTML.escape(info_esquema.getDescripcion) %]</td>
+	                                <script>
+	                                    $('.editable_esquema').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
+	                                        type      : 'text',
 	                                        submit    : OK,
 	                                        style   : 'display: inline',
-	                                        submitdata : {token: "[% token %]", edit: '1'},
+	                                        submitdata : {token: "[% token %]", edit: '1', edit_esquema: '1'},
 	                                        indicator : loaderPath,
 	
 	                                   }); 
-                                    </script>
-                                    <td>
-		                                [% PERL %]
-		                                    print C4::AR::Filtros::to_Icon(  
-		                                                                        boton   => "icon_cancelar",
-		                                                                        onClick => "eliminarEsquemaRow('[% detalle.id %]');",
-		                                                                        title   => "[% 'Eliminar' | i18n %]",
-		                                                                        alternClass => "botonCentradoTabla",
-		                                                                        elem => 'span',
-		                                                                        style => 'float: left;',
-		                                            ) ;
-		                                [% END %]
-		                            </td>
-                                    
-	                              </tr>
-	                            [% END %]
-	                    </tbody>
-	                </table>
-	            </div>
-                [% PERL %]
-                       print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar campo' | i18n %]",
-                                                           boton   => "boton_agregar",
-                                                           onClick => "agregarCampo([% id_esquema %]);",
-                                                           title   => "[% 'Agregar campo' | i18n %]",
-                               ) ;
-                [% END %]
-        <div class="mensajes_informacion" style="clear:both;"> [% table_error_message %] </div>
-    </fieldset>
-</div>
-
+	                                </script>
+	                                <script>
+	                                    $('.editable_esquema').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
+	                                        type      : 'text',
+	                                        submit    : OK,
+	                                        style   : 'display: inline',
+	                                        submitdata : {token: "[% token %]", edit: '1', edit_esquema: '1'},
+	                                        indicator : loaderPath,
+	
+	                                   }); 
+	                                </script>
+	                                <td>
+	                                    [% PERL %]
+	                                        print C4::AR::Filtros::to_Icon(  
+	                                                                            boton   => "icon_cancelar",
+	                                                                            onClick => "eliminarEsquema('[% info_esquema.id %]');",
+	                                                                            title   => "[% 'Eliminar Esquema' | i18n %]",
+	                                                                            alternClass => "botonCentradoTabla",
+	                                                                            elem => 'span',
+	                                                                            style => 'float: left;',
+	                                                ) ;
+	                                    [% END %]
+	                                </td>
+	                             </tr>
+	                        </tbody>
+	                    </table>
+	                </div>
+	        <div class="mensajes_informacion" style="clear:both;"> [% table_error_message_esquema %] </div>
+	    </fieldset>
+	</div>
+	
+	<div id="tabla_referencia">
+	    <fieldset class="resultados_busqueda">
+	        <legend class="titulo_legend trigger click">[% "Detalle del esquema " | i18n %] [% esquema_title %]</legend>
+		            <div class="datos_tabla_div" id="datos_tabla_div">
+		                <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
+		                    <thead>
+		                        <tr class="titulo_tabla_resultado">
+	                                <th class="click"> [% 'Campo origen' | i18n %]</th>
+	                                <th class="click"> [% 'SubCampo origen' | i18n %]</th>
+	                                <th class="click"> [% 'Campo destino' | i18n %]</th>
+	                                <th class="click"> [% 'SubCampo destino' | i18n %]</th>
+	                                <th class="click"> [% 'Nivel' | i18n %]</th>
+	                                <th class="click"> [% 'Ignorar' | i18n %]</th>
+	                                <th class="click"> [% 'Eliminar' | i18n %]</th>
+		                        </tr>
+		                    </thead>
+		                    <tbody>
+		                            [% FOREACH detalle IN esquema %]
+										<script>var esquema = [% detalle.id %]</script>	                              
+										<tr>
+	                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
+	                                    <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
+	                                    <td class="editable" id="[% detalle.id %]___cd">[% detalle.getCampoDestino %]</td>
+	                                    <td class="editable" id="[% detalle.id %]___scd">[% detalle.getSubcampoDestino %]</td>
+	                                    <td class="editable_hover editable_nivel" id="[% detalle.id %]___n">[% detalle.getNivel %]</td>
+	                                    <script>
+	                                        $('.editable_nivel').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
+	                                            data   : " {'1':'1','2':'2','3':'3','selected':'[% 'detalle.getNivel' %]'}",
+	                                            type      : 'select',
+	                                            submit    : OK,
+	                                            style   : 'display: inline',
+	                                            submitdata : {token: "[% token %]", edit: '1'},
+	                                            indicator : loaderPath,
+	    
+	                                       }); 
+	                                    </script>
+	                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
+	                                    <script>
+		                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
+		                                        data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'detalle.getIgnorarFront' %]'}",
+		                                        type      : 'select',
+		                                        submit    : OK,
+		                                        style   : 'display: inline',
+		                                        submitdata : {token: "[% token %]", edit: '1'},
+		                                        indicator : loaderPath,
+		
+		                                   }); 
+	                                    </script>
+	                                    <td>
+			                                [% PERL %]
+			                                    print C4::AR::Filtros::to_Icon(  
+			                                                                        boton   => "icon_cancelar",
+			                                                                        onClick => "eliminarEsquemaRow('[% detalle.id %]');",
+			                                                                        title   => "[% 'Eliminar' | i18n %]",
+			                                                                        alternClass => "botonCentradoTabla",
+			                                                                        elem => 'span',
+			                                                                        style => 'float: left;',
+			                                            ) ;
+			                                [% END %]
+			                            </td>
+	                                    
+		                              </tr>
+		                            [% END %]
+		                    </tbody>
+		                </table>
+		            </div>
+	                [% PERL %]
+	                       print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar campo' | i18n %]",
+	                                                           boton   => "boton_agregar",
+	                                                           onClick => "agregarCampo([% id_esquema %]);",
+	                                                           title   => "[% 'Agregar campo' | i18n %]",
+	                               ) ;
+	                [% END %]
+	        <div class="mensajes_informacion" style="clear:both;"> [% table_error_message %] </div>
+	    </fieldset>
+	</div>
+[% END %]
 
