--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
@@ -24,11 +24,13 @@
         <legend class="titulo_legend">[% "Selecci&oacute; de esquema de importaci&oacute;n" | i18n %]</legend>
         <div class="permisos_selector">
             <ul>
-                <li class="sub_item">
-                    <label for="id_ui">[% 'Esquema' | i18n %]: </label>
-                    [% combo_esquemas_importacion %]
-                </li>
-
+                [% IF combo_esquemas_importacion %]
+	                <li class="sub_item">
+	                    <label for="id_ui">[% 'Esquema' | i18n %]: </label>
+	                        [% combo_esquemas_importacion %]
+	                </li>
+                [% END %]
+                
                 [% PERL %]
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Nuevo esquema' | i18n %]",
                                                         boton   => "boton_agregar",
