--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
@@ -6,15 +6,20 @@
         $('#uploadfile').submit();
     }
 
-    function cambiarEsquema() {
-      if ($('#esquemaImportacion').val() == "-1"){
-            $('#esquema_nuevo').show();
-          }
-         else{
-             $('#esquema_nuevo').hide();
-             }
-    }
-
+      $(document).ready(function() {
+        $('#nuevo_esquema').click (
+            function() {
+              if ($('#nuevo_esquema').attr('checked')){
+                    $('#esquema_nuevo').show();
+                    $('#seleccionar_esquema').hide();
+                  }
+                 else{
+                     $('#esquema_nuevo').hide();
+                     $('#seleccionar_esquema').show();
+                     }
+            }
+        );
+      });
 </script>
 <fieldset>
 <legend><strong>[% "Nueva Importaci&oacute;n:" | i18n %]</strong></legend>
@@ -41,13 +46,17 @@
         <label>Comentario: </label>
         <input type="text" name="comentario">
       </li>
-      <li class="sub_item">
+      <li class="sub_item" id='seleccionar_esquema'>
         <label>Seleccionar Esquema: </label>
         [% combo_esquemas %]
       </li>
-       <li class="sub_item" id='esquema_nuevo' style="display: none;">
+      <li class="sub_item" id='esquema_nuevo' style="display: none;">
         <label>Nombre Nuevo Esquema: </label>
         <input type="text" name="nombreEsquema" > (Si se deja en blanco se utiliza el nombre del archivo.)
+      </li>
+       <li class="sub_item">
+        <label>Generar Nuevo Esquema: </label>
+        <input type="checkbox" name="nuevo_esquema" id="nuevo_esquema">
       </li>
  </ol>
 
