--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -26,14 +26,14 @@ var loaderPath= "";
 [% IF info_esquema %]
 	<div id="tabla_referencia">
 	    <fieldset class="resultados_busqueda">
-	        <legend class="titulo_legend trigger click">[% "Esquema " | i18n %] [% HTML.escape(esquema_title) %]</legend>
+	        <legend class="titulo_legend trigger">[% "Esquema " | i18n %] [% HTML.escape(esquema_title) %]</legend>
 	                <div class="datos_tabla_div" id="datos_tabla_div_esquema">
 	                    <table id="tabla_esquema" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
 	                        <thead>
 	                            <tr class="titulo_tabla_resultado">
-	                                <th class="click"> [% 'Nombre' | i18n %]</th>
-	                                <th class="click"> [% 'Descripci&oacute;n' | i18n %]</th>
-	                                <th class="click"> [% 'Eliminar' | i18n %]</th>
+	                                <th class=""> [% 'Nombre' | i18n %]</th>
+	                                <th class=""> [% 'Descripci&oacute;n' | i18n %]</th>
+	                                <th class=""> [% 'Eliminar' | i18n %]</th>
 	                            </tr>
 	                        </thead>
 	                        <tbody>
@@ -82,7 +82,7 @@ var loaderPath= "";
 	
 	<div id="tabla_referencia">
 	    <fieldset class="resultados_busqueda">
-	        <legend class="titulo_legend trigger click">[% "Detalle del esquema " | i18n %] [% esquema_title %]</legend>
+	        <legend class="titulo_legend trigger">[% "Detalle del esquema " | i18n %] [% esquema_title %]</legend>
 		            <div class="datos_tabla_div" id="datos_tabla_div">
 		                <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
 		                    <thead>
