--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
@@ -2,12 +2,60 @@
 <script type="text/javascript" src="/intranet-tmpl/includes/importacion/detalleImportacion.js"></script>
 
 [% INCLUDE "FormValidateHelper.inc" %]
+
 <script type="text/javascript">
+
+    $(document).ready(function() {
+         $("#campo1").hide();
+         $("#subcampo1").hide();
+         $("#campo2").hide();
+         $("#subcampo2").hide();
        detalleImportacion([% importacion.getId %]);
+    });
+
 </script>
+
+
 <fieldset>
-<legend class="titulo_legend_resaltado">Detalle de la Importaci&oacute;n [% importacion.getTitulo %]</legend>
+<legend class="titulo_legend_resaltado">Detalle de la Importaci&oacute;n ([% importacion.getNombre %])</legend>
 <div>
+
+    <fieldset>
+    <legend class="titulo_legend_resaltado">Relaci&oacute;n Registro/Ejemplares</legend>
+    <div>
+     <ol>
+          <li class="sub_item">
+          <label>Campo de Identificaci&oacute;n </label>
+            [% selectCampoX1 %]
+            <select name="campo1" id="campo1" onChange="eleccionCampoOrigen('1','[% importacion.getIdImportacionEsquema %]')">
+                <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
+            </select>
+            <select name="subcampo1" id="subcampo1">
+                <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
+            </select>
+    </li>
+
+          </li>
+          <li class="sub_item">
+            <label>Campo de Relaci&oacute;n: </label>
+            [% selectCampoX2 %]
+            <select name="campo2" id="campo2" onChange="eleccionCampoOrigen('2','[% importacion.getIdImportacionEsquema %]')">
+                <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
+            </select>
+            <select name="subcampo2" id="subcampo2">
+                <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
+            </select>
+          </li>
+     </ol>
+
+            [% PERL %]
+                                print C4::AR::Filtros::to_Button(   text    => "[% 'Procesar' | i18n %]",
+                                                                    onClick => "doUpload();",
+                                        ) ;
+            [% END %]
+    </div>
+    </fieldset>
+
 
 </div>
 </fieldset>
