--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -89,9 +89,7 @@ var loaderPath= "";
 		                        <tr class="titulo_tabla_resultado">
 	                                <th class="click"> [% 'Campo origen' | i18n %]</th>
 	                                <th class="click"> [% 'SubCampo origen' | i18n %]</th>
-	                                <th class="click"> [% 'Campo destino' | i18n %]</th>
-	                                <th class="click"> [% 'SubCampo destino' | i18n %]</th>
-	                                <th class="click"> [% 'Nivel' | i18n %]</th>
+	                                <th class="click"> [% 'Destino' | i18n %]</th>
 	                                <th class="click"> [% 'Ignorar' | i18n %]</th>
 	                                <th class="click"> [% 'Eliminar' | i18n %]</th>
 		                        </tr>
@@ -101,21 +99,9 @@ var loaderPath= "";
 										<script>var esquema = [% detalle.id %]</script>	                              
 										<tr>
 	                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
-	                                    <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
-	                                    <td class="editable" id="[% detalle.id %]___cd">[% detalle.getCampoDestino %]</td>
-	                                    <td class="editable" id="[% detalle.id %]___scd">[% detalle.getSubcampoDestino %]</td>
-	                                    <td class="editable_hover editable_nivel" id="[% detalle.id %]___n">[% detalle.getNivel %]</td>
-	                                    <script>
-	                                        $('.editable_nivel').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
-	                                            data   : " {'1':'1','2':'2','3':'3','selected':'[% 'detalle.getNivel' %]'}",
-	                                            type      : 'select',
-	                                            submit    : OK,
-	                                            style   : 'display: inline',
-	                                            submitdata : {token: "[% token %]", edit: '1'},
-	                                            indicator : loaderPath,
-	    
-	                                       }); 
-	                                    </script>
+                                        <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
+                                        <td class="click click_destino" id="[% detalle.id %]___destino">[% detalle.getDestino %]</td>
+
 	                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
 	                                    <script>
 		                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
